--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="ppck-ver" content="a8b13d099588d2b65c4201c4f203094b" />
     <title>Snake Game</title>
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -569,3 +570,4 @@
     </script>
   </body>
 </html>
+
