--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <script type="text/javascript">
+   var uid = '495409';
+   var wid = '746558';
+   var pop_tag = document.createElement('script');pop_tag.src='//cdn.popcash.net/show.js';document.body.appendChild(pop_tag);
+   pop_tag.onerror = function() {pop_tag = document.createElement('script');pop_tag.src='//cdn2.popcash.net/show.js';document.body.appendChild(pop_tag)};
+</script>
     <!-- Navigation Bar -->
     <nav>
       <div class="nav-container">
@@ -570,4 +576,5 @@
     </script>
   </body>
 </html>
+
 
